--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BDWatch — Independent Human Rights Watchdog for Bangladesh</title>
     <meta property="og:title" content="BDWatch — Independent Human Rights Watchdog for Bangladesh">
     <meta property="og:description" content="BDWatch documents and analyzes human rights violations, political repression, and civic space in Bangladesh. Secure reporting, verified evidence, and policy-grade analysis.">
-    <meta property="og:image" content="[Placeholder for BDWatch logo with tagline: 'Independent. Evidence-driven. Bangladesh.']">
+    <meta property="og:image" content="https://raw.githubusercontent.com/mhasannycct/bdwatchorg/refs/heads/main/BDWatchorgLogo.jpg">
     <meta property="og:image:alt" content="BDWatch logo with tagline: 'Independent. Evidence-driven. Bangladesh.'">
     <!-- Latest Bootstrap CSS (v5.3.3) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -57,6 +57,14 @@
         }
         .navbar.scrolled {
             background-color: #212529 !important;
+        }
+        .navbar-brand img {
+            height: 40px;
+            width: auto;
+            transition: transform 0.3s ease;
+        }
+        .navbar-brand img:hover {
+            transform: scale(1.1);
         }
         .cta-btn {
             background: linear-gradient(45deg, var(--accent-color), #feca57);
@@ -217,6 +225,9 @@
             #what-we-do .card-title {
                 font-size: 1.3rem;
             }
+            .navbar-brand img {
+                height: 30px;
+            }
         }
     </style>
 </head>
@@ -224,7 +235,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">BDWatch</a>
+            <a class="navbar-brand" href="#">
+                <img src="https://raw.githubusercontent.com/mhasannycct/bdwatchorg/refs/heads/main/BDWatchorgLogo.jpg" alt="BDWatch Logo" class="img-fluid">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -534,10 +547,10 @@
                     <p class="text-white"><strong>Office:</strong> Dhaka & New York (remote-first).</p>
                     <p class="text-white"><strong>Business hours:</strong> Mon–Fri, 09:00–18:00 local.</p>
                     <div class="social-icons text-center">
-                        <a href="https://facebook.com/bdwatch" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/bdwatch" target="_blank"><i class="fab fa-x-twitter"></i></a>
-                        <a href="https://linkedin.com/company/bdwatch" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://youtube.com/bdwatch" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://facebook.com/bdwatchorg" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://x.com/bdwatchorg" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://linkedin.com/company/bdwatchog" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://youtube.com/bdwatchorg" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
